--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,10 @@ Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 MPIFiles = "371237a9-e6c1-5201-9adb-3d8cfa78fa9f"
 MPIReco = "e4246700-6248-511e-8146-a1d1f47669d2"
 RegularizedLeastSquares = "1e9c538a-f78c-5de5-8ffb-0b6dbe892d23"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
