--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 MPIFiles = "371237a9-e6c1-5201-9adb-3d8cfa78fa9f"
 MPIReco = "e4246700-6248-511e-8146-a1d1f47669d2"
 RegularizedLeastSquares = "1e9c538a-f78c-5de5-8ffb-0b6dbe892d23"
